# ralph-engine

./: .editorconfig  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yaml  .tool-versions  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  clippy.toml  deny.toml  dist-workspace.toml  go.mod  lefthook.yml  llms.txt  package-lock.json  package.json  release-please-config.json  release-plz.toml  sonar-project.properties
.claude/commands/: audit.md  security-audit.md
.claude/rules/: plugin-contracts.md  testing.md  tui-design-system.md
.github/: SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: catalog-scan.yml  ci.yml  pages.yml  release-please.yml  release-plz.yml  release.yml
.ralph-engine/: .accepted-autonomous
catalog/: index.html
core/: README.md
core/crates/re-build-utils/: Cargo.toml
core/crates/re-build-utils/src/: lib.rs
core/crates/re-cli/: Cargo.toml  build.rs
core/crates/re-cli/locales/: en.toml  pt-br.toml
core/crates/re-cli/src/: catalog.rs  cli_style.rs  error.rs  i18n.rs  lib.rs  main.rs
core/crates/re-cli/src/commands/: agents.rs  auto_discovery.rs  capabilities.rs  checks.rs  config.rs  doctor.rs  embedded_assets.rs  format.rs  grouped_surfaces.rs  hooks.rs  init.rs  install.rs  locales.rs  mcp.rs  mod.rs  plugin_surfaces.rs  plugins.rs  policies.rs  prompts.rs  providers.rs  run.rs  runtime.rs  runtime_state.rs  templates.rs  tui.rs
core/crates/re-cli/src/i18n/: en.rs  fn_en.rs  fn_pt_br.rs  mod.rs  pt_br.rs
core/crates/re-cli/tests/: cli_smoke.rs
core/crates/re-config/: CHANGELOG.md  Cargo.toml
core/crates/re-config/src/: lib.rs
core/crates/re-config/tests/: project_config.rs
core/crates/re-core/: CHANGELOG.md  Cargo.toml  build.rs
core/crates/re-core/locales/: en.toml  pt-br.toml
core/crates/re-core/src/: lib.rs
core/crates/re-core/src/i18n/: en.rs  fn_en.rs  fn_pt_br.rs  mod.rs  pt_br.rs
core/crates/re-mcp/: CHANGELOG.md  Cargo.toml  build.rs
core/crates/re-mcp/locales/: en.toml  pt-br.toml
core/crates/re-mcp/src/: lib.rs
core/crates/re-mcp/src/i18n/: en.rs  mod.rs  pt_br.rs
core/crates/re-mcp/tests/: server_contract.rs
core/crates/re-official/: CHANGELOG.md  Cargo.toml  build.rs
core/crates/re-official/src/: lib.rs
core/crates/re-plugin/: CHANGELOG.md  Cargo.toml  build.rs
core/crates/re-plugin/locales/: en.toml  pt-br.toml
core/crates/re-plugin/src/: agent_helpers.rs  lib.rs
core/crates/re-plugin/src/i18n/: en.rs  mod.rs  pt_br.rs
core/crates/re-plugin/tests/: plugin_contract.rs
core/crates/re-tui/: CHANGELOG.md  Cargo.toml
core/crates/re-tui/src/: clipboard.rs  events.rs  feed.rs  indicators.rs  keybindings.rs  layout.rs  lib.rs  logging.rs  logo.rs  process.rs  terminal.rs  theme.rs
core/crates/re-tui/src/terminal/: autocomplete.rs  mod.rs  render.rs  render_input.rs  render_modals.rs  render_panels.rs  shell.rs  sidebar_groups.rs  style.rs  tests.rs  types.rs
docs/: architecture.md  building.md  cli-reference.md  config-reference.md  configuration.md  hooks.md  improvements-backlog.md  index.md  installation.md  package-lock.json  package.json  plugins.md  quickstart.md  releasing.md  roadmap.md  troubleshooting.md
docs/.vitepress/: config.mts
docs/assets/: tui-demo.tape
docs/decisions/: 001-devcontainer-vs-bootstrap.md  002-lgpd-gdpr-compliance.md
docs/development/: backlog.md  building.md  releasing.md  roadmap.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: configuration.md  hooks.md  troubleshooting.md
docs/reference/: architecture.md  cli.md
internal/claude/: client.go  client_test.go
internal/cli/: config.go  doctor.go  init.go  preflight.go  prepare.go  root.go  run.go  status.go  update.go
internal/config/: config.go  config_test.go  validate.go  validate_test.go
internal/context/: loader.go  loader_test.go
internal/dashboard/: model.go  model_test.go
internal/detect/: detect.go  detect_test.go
internal/engine/: engine.go  engine_test.go  prompt.go  prompt_test.go  run.go  run_test.go
internal/hooks/: hooks.go  hooks_test.go  proc_unix.go  proc_windows.go
internal/logger/: logger.go  logger_test.go  rotate.go  rotate_test.go
internal/runner/: circuit_breaker.go  circuit_breaker_test.go
internal/security/: notice.go  notice_test.go
internal/ssh/: health.go  health_test.go
internal/state/: state.go  state_test.go
npm/: .gitignore  README.md  install.js  package.json
packaging/: README.md
plugins/: README.md
plugins/official/codex/: Cargo.toml  README.md  README.pt-br.md  build.rs  manifest.yaml
plugins/official/codex/locales/: en.toml  pt-br.toml
plugins/official/codex/src/: lib.rs
plugins/official/codex/src/i18n/: en.rs  mod.rs  pt_br.rs
plugins/official/github/: Cargo.toml  README.md  README.pt-br.md  build.rs  manifest.yaml
plugins/official/github/locales/: en.toml  pt-br.toml
plugins/official/github/src/: lib.rs
plugins/official/github/src/i18n/: en.rs  mod.rs  pt_br.rs
scripts/: README.md  add-locale.sh  assemble-public-surfaces.sh  bootstrap-dev.ps1  bootstrap-dev.sh  build-local.sh  check-i18n-compliance.sh  export-release-version.sh  export-sonarcloud-metadata.sh  install-dev-tools.ps1  install-dev-tools.sh  install.sh  normalize-docs-sitemap.mjs  prepare-docs-content.mjs  prepare-docs-content.sh  prepare-npm-release.mjs  publish-homebrew-tap.sh  release-check.sh  render-homebrew-formula.mjs  scan-community-plugins.mjs  sync-to-public.sh  validate-ci-local.sh  validate.sh  verify-dist-workspace.sh  verify-homebrew-formula.sh  verify-npm-install.mjs  verify-npm-release.mjs  verify-plugin-contracts.mjs  verify-release-assets.sh  verify-release-channel-contract.sh  verify-release-readiness.sh  verify-sonarcloud-access.sh
shared/: design-tokens.css
site/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
testdata/: sprint-status.yaml
tools/: README.md
(+281 files in other folders)
