[package]
name = "re-build-utils"
description = "Shared build-script utilities for Ralph Engine crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
toml = "1.1"
