[package]
name = "re-cli"
description = "Plugin-first CLI for agentic coding workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "ralph-engine"
path = "src/main.rs"

[dependencies]
re-config = { path = "../re-config", version = "0.2.0-alpha.1" }
re-core = { path = "../re-core", version = "0.2.0-alpha.1" }
re-mcp = { path = "../re-mcp", version = "0.2.0-alpha.1" }
re-official = { path = "../re-official", version = "0.2.0-alpha.1" }
re-plugin = { path = "../re-plugin", version = "0.2.0-alpha.1" }
re-tui = { path = "../re-tui", version = "0.2.0-alpha.1" }
sentry = { version = "0.47", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }

[build-dependencies]
re-build-utils = { path = "../re-build-utils", version = "0.2.0-alpha.1" }

[lints]
workspace = true
