[package]
name = "re-core"
description = "Shared runtime foundations for Ralph Engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
re-config = { path = "../re-config", version = "0.2.0-alpha.1" }
re-mcp = { path = "../re-mcp", version = "0.2.0-alpha.1" }
re-plugin = { path = "../re-plugin", version = "0.2.0-alpha.1" }

[build-dependencies]
re-build-utils = { path = "../re-build-utils", version = "0.2.0-alpha.1" }

[lints]
workspace = true
