[package]
name = "re-mcp"
description = "MCP server discovery and launch for Ralph Engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
re-config = { path = "../re-config", version = "0.2.0-alpha.1" }

[build-dependencies]
re-build-utils = { path = "../re-build-utils", version = "0.2.0-alpha.1" }

[lints]
workspace = true
