[package]
name = "re-official"
description = "Official plugin registry for Ralph Engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
re-config = { path = "../re-config", version = "0.2.0-alpha.1" }
re-core = { path = "../re-core", version = "0.2.0-alpha.1" }
re-mcp = { path = "../re-mcp", version = "0.2.0-alpha.1" }
re-plugin = { path = "../re-plugin", version = "0.2.0-alpha.1" }
re-plugin-basic = { path = "../../../plugins/official/basic", version = "0.2.0-alpha.1" }
re-plugin-bmad = { path = "../../../plugins/official/bmad", version = "0.2.0-alpha.1" }
re-plugin-claude = { path = "../../../plugins/official/claude", version = "0.2.0-alpha.1" }
re-plugin-claudebox = { path = "../../../plugins/official/claudebox", version = "0.2.0-alpha.1" }
re-plugin-codex = { path = "../../../plugins/official/codex", version = "0.2.0-alpha.1" }
re-plugin-github = { path = "../../../plugins/official/github", version = "0.2.0-alpha.1" }
re-plugin-ssh = { path = "../../../plugins/official/ssh", version = "0.2.0-alpha.1" }
re-plugin-tdd-strict = { path = "../../../plugins/official/tdd-strict", version = "0.2.0-alpha.1" }
re-plugin-hello-world = { path = "../../../plugins/official/hello-world", version = "0.2.0-alpha.1" }
re-plugin-findings = { path = "../../../plugins/official/findings", version = "0.2.0-alpha.1" }
re-plugin-guided = { path = "../../../plugins/official/guided", version = "0.2.0-alpha.1" }
re-plugin-context = { path = "../../../plugins/official/context", version = "0.2.0-alpha.1" }
re-plugin-router = { path = "../../../plugins/official/router", version = "0.2.0-alpha.1" }

[build-dependencies]
re-build-utils = { path = "../re-build-utils", version = "0.2.0-alpha.1" }
toml = "1.1"

[lints]
workspace = true
