[package]
name = "re-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
re-config = { path = "../re-config", version = "0.2.0-alpha.1" }

[lints]
workspace = true
