[package]
name = "re-tui"
description = "Terminal dashboard framework for Ralph Engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
ratatui = "0.30"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "6"

[lints]
workspace = true
