[package]
name = "re-plugin-codex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
re-mcp = { path = "../../../core/crates/re-mcp", version = "0.2.0-alpha.1" }
re-plugin = { path = "../../../core/crates/re-plugin", version = "0.2.0-alpha.1" }

[lints]
workspace = true
